<?xml version="1.0"?>
<package format="3">
  <name>ekf2_fusion_pkg</name>
  <version>0.0.0</version>
  <description>EKF2 visual GPS + IMU fusion</description>
  <maintainer email="pglitch89@gmail.com">Palak</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>srvs_pkg</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
